tests/rosetta/transpiler/Haskell/active-directory-connect.error
run: exit status 1

/workspace/mochi/tests/rosetta/transpiler/Haskell/active-directory-connect.hs:53:5: error:
    parse error on input ‘Base’
   |
53 |   { Base :: String,
   |     ^^^^
